IDE: Custom IDE title, added preview
(cherry picked from commit 2de900cb00d8267e5b6bc492eabdefbe1fd3172e)

--- a/ide/frames/window_options.lfm
+++ b/ide/frames/window_options.lfm
@@ -115,6 +115,7 @@ object WindowOptionsFrame: TWindowOptionsFrame
     ParentShowHint = False
     ShowHint = True
     TabOrder = 6
+    OnChange = TitleStartsWithProjectCheckBoxChange
   end
   object lblShowingWindows: TDividerBevel
     AnchorSideLeft.Control = Owner
