AboutBox/SplashScreen: Fix blurring on mac Retina displays, part 2. issue #41205
(cherry picked from commit 4f007f3d82d0ccdb478731a2e85c72657ef8db74)

--- a/ide/aboutfrm.lfm
+++ b/ide/aboutfrm.lfm
@@ -40,6 +40,8 @@ object AboutForm: TAboutForm
         Height = 300
         Top = 6
         Width = 450
+        Proportional = True
+        Stretch = True
       end
       object VersionLabel: TLabel
         AnchorSideLeft.Control = LogoImage
