Splash form: Fix size of splash image on mac. Issue #41205.

--- a/ide/splash.lfm
+++ b/ide/splash.lfm
@@ -16,6 +16,8 @@ object SplashForm: TSplashForm
     Top = 0
     Width = 450
     Align = alClient
+    Proportional = True
+    Stretch = True
     OnPaint = ImagePaint
   end
 end
