AboutBox/SplashScreen: Fix blurring on mac Retina displays, part 2 (issue #41205) (4f007f3d82d0ccdb478731a2e85c72657ef8db74) Splash form: Fix size of splash image on mac. Issue #41205. 2e210407555b67d98a921f8fe7bc94bafdc74472 (Applied manually due to conflict)

--- a/ide/aboutfrm.lfm
+++ b/ide/aboutfrm.lfm
@@ -10,13 +10,13 @@ object AboutForm: TAboutForm
   ClientWidth = 470
   Constraints.MinHeight = 390
   Constraints.MinWidth = 470
-  PopupMenu = PopupMenu1
-  Position = poScreenCenter
-  ShowHint = True
-  LCLVersion = '4.99.0.0'
   OnClose = FormClose
   OnCreate = AboutFormCreate
   OnShow = FormShow
+  PopupMenu = PopupMenu1
+  Position = poScreenCenter
+  ShowHint = True
+  LCLVersion = '3.7.0.0'
   object Notebook: TPageControl
     Left = 0
     Height = 340
@@ -40,6 +40,8 @@ object AboutForm: TAboutForm
         Height = 300
         Top = 6
         Width = 450
+        Proportional = True
+        Stretch = True
       end
       object VersionLabel: TLabel
         AnchorSideLeft.Control = LogoImage
