--- a/ide/splash.lfm
+++ b/ide/splash.lfm
@@ -9,7 +9,7 @@ object SplashForm: TSplashForm
   ClientWidth = 450
   FormStyle = fsSplash
   Position = poScreenCenter
-  LCLVersion = '2.1.0.0'
+  LCLVersion = '3.7.0.0'
   object Image: TImage
     Left = 0
     Height = 300
@@ -17,5 +17,7 @@ object SplashForm: TSplashForm
     Width = 450
     Align = alClient
     OnPaint = ImagePaint
+    Proportional = True
+    Stretch = True
   end
 end
