IDE: Remove Ctrl-Enter shortcut from IdoOptionsDlg. It did not work. Issue #40234.

--- a/ide/ideoptionsdlg.lfm
+++ b/ide/ideoptionsdlg.lfm
@@ -24,7 +24,7 @@ inherited IDEOptionsDialog: TIDEOptionsDialog
     BorderSpacing.Bottom = 6
     BorderSpacing.Around = 0
     OKButton.Name = 'OKButton'
-    OKButton.Hint = '[Ctrl+Enter]'
+    OKButton.Hint = '[Enter]'
     OKButton.DefaultCaption = True
     HelpButton.Name = 'HelpButton'
     HelpButton.Hint = '[F1]'
