IDE: In ComponentList show Designer when selecting component or clicking on selection button. Merge request !399 by n7800.

--- a/ide/componentlist.lfm
+++ b/ide/componentlist.lfm
@@ -54,6 +54,7 @@ object ComponentListForm: TComponentListForm
           TabOrder = 0
           OnDblClick = ComponentsDblClick
           OnKeyPress = TreeKeyPress
+          OnMouseDown = TreeMouseDown
           OnSelectionChanged = ListTreeSelectionChanged
           Options = [tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoReadOnly, tvoRowSelect, tvoToolTips]
         end
@@ -90,6 +91,7 @@ object ComponentListForm: TComponentListForm
           TabOrder = 0
           OnDblClick = ComponentsDblClick
           OnKeyPress = TreeKeyPress
+          OnMouseDown = TreeMouseDown
           OnSelectionChanged = ListTreeSelectionChanged
           Options = [tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoReadOnly, tvoRightClickSelect, tvoRowSelect, tvoShowButtons, tvoShowRoot, tvoToolTips]
         end
@@ -126,6 +128,7 @@ object ComponentListForm: TComponentListForm
           TabOrder = 0
           OnDblClick = ComponentsDblClick
           OnKeyPress = TreeKeyPress
+          OnMouseDown = TreeMouseDown
           OnSelectionChanged = ListTreeSelectionChanged
           Options = [tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoReadOnly, tvoRightClickSelect, tvoRowSelect, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
         end
