IDE: In ComponentList show Designer when selecting component or clicking on selection button. Merge request !399 by n7800.
(cherry picked from commit ca8d8b9b84d236e1c207ee2a4a76f1143ea55bf3)

--- a/ide/componentlist.lfm
+++ b/ide/componentlist.lfm
@@ -53,6 +53,7 @@ object ComponentListForm: TComponentListForm
           Options = [tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoReadOnly, tvoRowSelect, tvoToolTips]
           OnDblClick = ComponentsDblClick
           OnKeyPress = TreeKeyPress
+          OnMouseDown = TreeMouseDown
           OnSelectionChanged = ListTreeSelectionChanged
         end
       end
@@ -88,6 +89,7 @@ object ComponentListForm: TComponentListForm
           Options = [tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoReadOnly, tvoRightClickSelect, tvoRowSelect, tvoShowButtons, tvoShowRoot, tvoToolTips]
           OnDblClick = ComponentsDblClick
           OnKeyPress = TreeKeyPress
+          OnMouseDown = TreeMouseDown
           OnSelectionChanged = ListTreeSelectionChanged
         end
       end
@@ -123,6 +125,7 @@ object ComponentListForm: TComponentListForm
           Options = [tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoReadOnly, tvoRightClickSelect, tvoRowSelect, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
           OnDblClick = ComponentsDblClick
           OnKeyPress = TreeKeyPress
+          OnMouseDown = TreeMouseDown
           OnSelectionChanged = ListTreeSelectionChanged
         end
       end
