IDE/ProjectInspector: Hide project name and build mode in window title when docking. Issue #39418

--- a/ide/projectinspector.lfm
+++ b/ide/projectinspector.lfm
@@ -16,6 +16,7 @@ object ProjectInspectorForm: TProjectInspectorForm
   OnDestroy = FormDestroy
   OnDropFiles = FormDropFiles
   OnResize = FormResize
+  OnShow = FormShow
   object ItemsTreeView: TTreeView
     Left = 0
     Height = 261
