--- a/ide/frames/files_options.lfm
+++ b/ide/frames/files_options.lfm
@@ -12,48 +12,48 @@ object FilesOptionsFrame: TFilesOptionsFrame
   DesignLeft = 395
   DesignTop = 121
   object MaxRecentOpenFilesLabel: TLabel
-    AnchorSideLeft.Control = Owner
+    AnchorSideLeft.Control = MaxRecentOpenFilesSpin
     AnchorSideTop.Control = Owner
-    Left = 2
-    Height = 18
+    Left = 317
+    Height = 15
     Top = 2
-    Width = 161
+    Width = 138
     Caption = 'MaxRecentOpenFilesLabel'
     ParentColor = False
   end
   object MaxRecentProjectFilesLabel: TLabel
-    AnchorSideLeft.Control = lblCenter
+    AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = Owner
-    Left = 314
-    Height = 18
+    Left = 3
+    Height = 15
     Top = 2
-    Width = 170
+    Width = 146
     BorderSpacing.Left = 3
     Caption = 'MaxRecentProjectFilesLabel'
     ParentColor = False
   end
   object ShowCompileDialogCheckBox: TCheckBox
     AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = MaxRecentOpenFilesSpin
+    AnchorSideTop.Control = MaxRecentProjectFilesSpin
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Side = asrBottom
     Left = 2
-    Height = 22
-    Top = 65
-    Width = 211
+    Height = 19
+    Top = 53
+    Width = 178
     BorderSpacing.Top = 11
     Caption = 'ShowCompileDialogCheckBox'
-    OnChange = ShowCompileDialogCheckBoxChange
     TabOrder = 2
+    OnChange = ShowCompileDialogCheckBoxChange
   end
   object LazarusDirLabel: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = AutoCloseCompileDialogCheckBox
     AnchorSideTop.Side = asrBottom
     Left = 2
-    Height = 18
-    Top = 119
-    Width = 98
+    Height = 15
+    Top = 101
+    Width = 82
     BorderSpacing.Top = 10
     Caption = 'LazarusDirLabel'
     ParentColor = False
@@ -68,15 +68,15 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideBottom.Control = LazarusDirComboBox
     AnchorSideBottom.Side = asrBottom
     Left = 597
-    Height = 32
-    Top = 137
+    Height = 23
+    Top = 116
     Width = 23
     Anchors = [akTop, akRight, akBottom]
     Caption = '...'
-    OnClick = DirectoriesButtonClick
     ParentShowHint = False
     ShowHint = True
     TabOrder = 5
+    OnClick = DirectoriesButtonClick
   end
   object LazarusDirComboBox: TComboBox
     AnchorSideLeft.Control = Owner
@@ -84,11 +84,11 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = LazarusDirButton
     Left = 2
-    Height = 32
-    Top = 137
+    Height = 23
+    Top = 116
     Width = 595
     Anchors = [akTop, akLeft, akRight]
-    ItemHeight = 24
+    ItemHeight = 15
     ParentShowHint = False
     ShowHint = True
     TabOrder = 4
@@ -100,11 +100,11 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = CompilerPathButton
     Left = 2
-    Height = 32
-    Top = 193
+    Height = 23
+    Top = 160
     Width = 595
     Anchors = [akTop, akLeft, akRight]
-    ItemHeight = 24
+    ItemHeight = 15
     TabOrder = 6
     Text = 'CompilerPathComboBox'
   end
@@ -115,22 +115,22 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideBottom.Control = CompilerPathComboBox
     AnchorSideBottom.Side = asrBottom
     Left = 597
-    Height = 32
-    Top = 193
+    Height = 23
+    Top = 160
     Width = 23
     Anchors = [akTop, akRight, akBottom]
     Caption = '...'
-    OnClick = FilesButtonClick
     TabOrder = 7
+    OnClick = FilesButtonClick
   end
   object CompilerPathLabel: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = LazarusDirComboBox
     AnchorSideTop.Side = asrBottom
     Left = 2
-    Height = 18
-    Top = 175
-    Width = 117
+    Height = 15
+    Top = 145
+    Width = 101
     BorderSpacing.Top = 6
     Caption = 'CompilerPathLabel'
     ParentColor = False
@@ -141,11 +141,11 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = FPCSourceDirButton
     Left = 2
-    Height = 32
-    Top = 249
+    Height = 23
+    Top = 204
     Width = 595
     Anchors = [akTop, akLeft, akRight]
-    ItemHeight = 24
+    ItemHeight = 15
     TabOrder = 8
     Text = 'FPCSourceDirComboBox'
   end
@@ -156,22 +156,22 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideBottom.Control = FPCSourceDirComboBox
     AnchorSideBottom.Side = asrBottom
     Left = 597
-    Height = 32
-    Top = 249
+    Height = 23
+    Top = 204
     Width = 23
     Anchors = [akTop, akRight, akBottom]
     Caption = '...'
-    OnClick = DirectoriesButtonClick
     TabOrder = 9
+    OnClick = DirectoriesButtonClick
   end
   object FPCSourceDirLabel: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = CompilerPathComboBox
     AnchorSideTop.Side = asrBottom
     Left = 2
-    Height = 18
-    Top = 231
-    Width = 116
+    Height = 15
+    Top = 189
+    Width = 100
     BorderSpacing.Top = 6
     Caption = 'FPCSourceDirLabel'
     ParentColor = False
@@ -181,9 +181,9 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Control = FPCSourceDirComboBox
     AnchorSideTop.Side = asrBottom
     Left = 2
-    Height = 18
-    Top = 287
-    Width = 94
+    Height = 15
+    Top = 233
+    Width = 81
     BorderSpacing.Top = 6
     Caption = 'MakePathLabel'
     ParentColor = False
@@ -193,9 +193,9 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Control = MakePathComboBox
     AnchorSideTop.Side = asrBottom
     Left = 2
-    Height = 18
-    Top = 343
-    Width = 107
+    Height = 15
+    Top = 277
+    Width = 91
     BorderSpacing.Top = 6
     Caption = 'TestBuildDirLabel'
     ParentColor = False
@@ -206,11 +206,11 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = MakePathButton
     Left = 2
-    Height = 32
-    Top = 305
+    Height = 23
+    Top = 248
     Width = 595
     Anchors = [akTop, akLeft, akRight]
-    ItemHeight = 24
+    ItemHeight = 15
     TabOrder = 10
     Text = 'MakePathComboBox'
   end
@@ -221,13 +221,13 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideBottom.Control = MakePathComboBox
     AnchorSideBottom.Side = asrBottom
     Left = 597
-    Height = 32
-    Top = 305
+    Height = 23
+    Top = 248
     Width = 23
     Anchors = [akTop, akRight, akBottom]
     Caption = '...'
-    OnClick = FilesButtonClick
     TabOrder = 11
+    OnClick = FilesButtonClick
   end
   object TestBuildDirComboBox: TComboBox
     AnchorSideLeft.Control = Owner
@@ -235,11 +235,11 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = TestBuildDirButton
     Left = 2
-    Height = 32
-    Top = 361
+    Height = 23
+    Top = 292
     Width = 595
     Anchors = [akTop, akLeft, akRight]
-    ItemHeight = 24
+    ItemHeight = 15
     TabOrder = 12
     Text = 'TestBuildDirComboBox'
   end
@@ -250,13 +250,13 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideBottom.Control = TestBuildDirComboBox
     AnchorSideBottom.Side = asrBottom
     Left = 597
-    Height = 32
-    Top = 361
+    Height = 23
+    Top = 292
     Width = 23
     Anchors = [akTop, akRight, akBottom]
     Caption = '...'
-    OnClick = DirectoriesButtonClick
     TabOrder = 13
+    OnClick = DirectoriesButtonClick
   end
   object AutoCloseCompileDialogCheckBox: TCheckBox
     AnchorSideLeft.Control = ShowCompileDialogCheckBox
@@ -264,9 +264,9 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Side = asrBottom
     Left = 32
-    Height = 22
-    Top = 87
-    Width = 239
+    Height = 19
+    Top = 72
+    Width = 204
     BorderSpacing.Left = 30
     Caption = 'AutoCloseCompileDialogCheckBox'
     TabOrder = 3
@@ -276,9 +276,9 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Control = TestBuildDirComboBox
     AnchorSideTop.Side = asrBottom
     Left = 2
-    Height = 18
-    Top = 399
-    Width = 177
+    Height = 15
+    Top = 321
+    Width = 153
     Alignment = taRightJustify
     BorderSpacing.Top = 6
     Caption = 'CompilerTranslationFileLabel'
@@ -293,15 +293,15 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideBottom.Control = CompilerTranslationFileComboBox
     AnchorSideBottom.Side = asrBottom
     Left = 597
-    Height = 32
-    Top = 417
+    Height = 23
+    Top = 336
     Width = 23
     Anchors = [akTop, akRight, akBottom]
     Caption = '...'
-    OnClick = CompilerTranslationFileButtonClick
     ParentShowHint = False
     ShowHint = True
     TabOrder = 15
+    OnClick = CompilerTranslationFileButtonClick
   end
   object CompilerTranslationFileComboBox: TComboBox
     AnchorSideLeft.Control = Owner
@@ -309,11 +309,11 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = CompilerTranslationFileButton
     Left = 2
-    Height = 32
-    Top = 417
+    Height = 23
+    Top = 336
     Width = 595
     Anchors = [akTop, akLeft, akRight]
-    ItemHeight = 24
+    ItemHeight = 15
     ParentShowHint = False
     ShowHint = True
     TabOrder = 14
@@ -329,34 +329,17 @@ object FilesOptionsFrame: TFilesOptionsFrame
     ParentColor = False
   end
   object MaxRecentOpenFilesSpin: TSpinEdit
-    AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = MaxRecentOpenFilesLabel
-    AnchorSideTop.Side = asrBottom
-    AnchorSideRight.Control = lblCenter
-    AnchorSideRight.Side = asrBottom
-    Left = 2
-    Height = 32
-    Hint = 'Value 0 means unlimited.'
-    Top = 22
-    Width = 305
-    Anchors = [akTop, akLeft, akRight]
-    BorderSpacing.Right = 3
-    BorderSpacing.Around = 2
-    ParentShowHint = False
-    ShowHint = True
-    TabOrder = 0
-  end
-  object MaxRecentProjectFilesSpin: TSpinEdit
     AnchorSideLeft.Control = lblCenter
-    AnchorSideTop.Control = MaxRecentProjectFilesLabel
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = MaxRecentOpenFilesLabel
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 316
-    Height = 32
+    Left = 317
+    Height = 23
     Hint = 'Value 0 means unlimited.'
-    Top = 22
-    Width = 304
+    Top = 19
+    Width = 303
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Left = 3
     BorderSpacing.Around = 2
@@ -364,14 +347,31 @@ object FilesOptionsFrame: TFilesOptionsFrame
     ShowHint = True
     TabOrder = 1
   end
+  object MaxRecentProjectFilesSpin: TSpinEdit
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = MaxRecentProjectFilesLabel
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = lblCenter
+    Left = 2
+    Height = 23
+    Hint = 'Value 0 means unlimited.'
+    Top = 19
+    Width = 304
+    Anchors = [akTop, akLeft, akRight]
+    BorderSpacing.Right = 3
+    BorderSpacing.Around = 2
+    ParentShowHint = False
+    ShowHint = True
+    TabOrder = 0
+  end
   object FppkgConfigurationFileLabel: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = CompilerTranslationFileComboBox
     AnchorSideTop.Side = asrBottom
     Left = 2
-    Height = 18
-    Top = 455
-    Width = 176
+    Height = 15
+    Top = 365
+    Width = 153
     Alignment = taRightJustify
     BorderSpacing.Top = 6
     Caption = 'FppkgConfigurationFileLabel'
@@ -385,11 +385,11 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = FppkgConfigurationFileButton
     Left = 2
-    Height = 32
-    Top = 473
+    Height = 23
+    Top = 380
     Width = 595
     Anchors = [akTop, akLeft, akRight]
-    ItemHeight = 24
+    ItemHeight = 15
     ParentShowHint = False
     ShowHint = True
     TabOrder = 16
@@ -402,14 +402,14 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideBottom.Control = FppkgConfigurationFileComboBox
     AnchorSideBottom.Side = asrBottom
     Left = 597
-    Height = 32
-    Top = 473
+    Height = 23
+    Top = 380
     Width = 23
     Anchors = [akTop, akRight, akBottom]
     Caption = '...'
-    OnClick = FppkgConfigurationFileButtonClick
     ParentShowHint = False
     ShowHint = True
     TabOrder = 17
+    OnClick = FppkgConfigurationFileButtonClick
   end
 end
