--- a/ide/frames/files_options.lfm
+++ b/ide/frames/files_options.lfm
@@ -12,48 +12,34 @@ object FilesOptionsFrame: TFilesOptionsFrame
   DesignLeft = 395
   DesignTop = 121
   object MaxRecentOpenFilesLabel: TLabel
-    AnchorSideLeft.Control = MaxRecentOpenFilesSpin
+    AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = Owner
-    Left = 317
-    Height = 15
+    Left = 2
+    Height = 13
     Top = 2
-    Width = 138
+    Width = 126
     Caption = 'MaxRecentOpenFilesLabel'
     ParentColor = False
   end
   object MaxRecentProjectFilesLabel: TLabel
-    AnchorSideLeft.Control = Owner
+    AnchorSideLeft.Control = lblCenter
     AnchorSideTop.Control = Owner
-    Left = 3
-    Height = 15
+    Left = 314
+    Height = 13
     Top = 2
-    Width = 146
+    Width = 134
     BorderSpacing.Left = 3
     Caption = 'MaxRecentProjectFilesLabel'
     ParentColor = False
   end
-  object ShowCompileDialogCheckBox: TCheckBox
-    AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = MaxRecentProjectFilesSpin
-    AnchorSideTop.Side = asrBottom
-    AnchorSideRight.Side = asrBottom
-    Left = 2
-    Height = 19
-    Top = 53
-    Width = 178
-    BorderSpacing.Top = 11
-    Caption = 'ShowCompileDialogCheckBox'
-    TabOrder = 2
-    OnChange = ShowCompileDialogCheckBoxChange
-  end
   object LazarusDirLabel: TLabel
     AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = AutoCloseCompileDialogCheckBox
+    AnchorSideTop.Control = MaxRecentOpenFilesSpin
     AnchorSideTop.Side = asrBottom
     Left = 2
-    Height = 15
-    Top = 101
-    Width = 82
+    Height = 13
+    Top = 48
+    Width = 75
     BorderSpacing.Top = 10
     Caption = 'LazarusDirLabel'
     ParentColor = False
@@ -68,14 +54,14 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideBottom.Control = LazarusDirComboBox
     AnchorSideBottom.Side = asrBottom
     Left = 597
-    Height = 23
-    Top = 116
+    Height = 21
+    Top = 61
     Width = 23
     Anchors = [akTop, akRight, akBottom]
     Caption = '...'
     ParentShowHint = False
     ShowHint = True
-    TabOrder = 5
+    TabOrder = 3
     OnClick = DirectoriesButtonClick
   end
   object LazarusDirComboBox: TComboBox
@@ -84,14 +70,14 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = LazarusDirButton
     Left = 2
-    Height = 23
-    Top = 116
+    Height = 21
+    Top = 61
     Width = 595
     Anchors = [akTop, akLeft, akRight]
-    ItemHeight = 15
+    ItemHeight = 13
     ParentShowHint = False
     ShowHint = True
-    TabOrder = 4
+    TabOrder = 2
     Text = 'LazarusDirComboBox'
   end
   object CompilerPathComboBox: TComboBox
@@ -100,12 +86,12 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = CompilerPathButton
     Left = 2
-    Height = 23
-    Top = 160
+    Height = 21
+    Top = 101
     Width = 595
     Anchors = [akTop, akLeft, akRight]
-    ItemHeight = 15
-    TabOrder = 6
+    ItemHeight = 13
+    TabOrder = 4
     Text = 'CompilerPathComboBox'
   end
   object CompilerPathButton: TButton
@@ -115,12 +101,12 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideBottom.Control = CompilerPathComboBox
     AnchorSideBottom.Side = asrBottom
     Left = 597
-    Height = 23
-    Top = 160
+    Height = 21
+    Top = 101
     Width = 23
     Anchors = [akTop, akRight, akBottom]
     Caption = '...'
-    TabOrder = 7
+    TabOrder = 5
     OnClick = FilesButtonClick
   end
   object CompilerPathLabel: TLabel
@@ -128,9 +114,9 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Control = LazarusDirComboBox
     AnchorSideTop.Side = asrBottom
     Left = 2
-    Height = 15
-    Top = 145
-    Width = 101
+    Height = 13
+    Top = 88
+    Width = 88
     BorderSpacing.Top = 6
     Caption = 'CompilerPathLabel'
     ParentColor = False
@@ -141,12 +127,12 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = FPCSourceDirButton
     Left = 2
-    Height = 23
-    Top = 204
+    Height = 21
+    Top = 141
     Width = 595
     Anchors = [akTop, akLeft, akRight]
-    ItemHeight = 15
-    TabOrder = 8
+    ItemHeight = 13
+    TabOrder = 6
     Text = 'FPCSourceDirComboBox'
   end
   object FPCSourceDirButton: TButton
@@ -156,12 +142,12 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideBottom.Control = FPCSourceDirComboBox
     AnchorSideBottom.Side = asrBottom
     Left = 597
-    Height = 23
-    Top = 204
+    Height = 21
+    Top = 141
     Width = 23
     Anchors = [akTop, akRight, akBottom]
     Caption = '...'
-    TabOrder = 9
+    TabOrder = 7
     OnClick = DirectoriesButtonClick
   end
   object FPCSourceDirLabel: TLabel
@@ -169,9 +155,9 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Control = CompilerPathComboBox
     AnchorSideTop.Side = asrBottom
     Left = 2
-    Height = 15
-    Top = 189
-    Width = 100
+    Height = 13
+    Top = 128
+    Width = 90
     BorderSpacing.Top = 6
     Caption = 'FPCSourceDirLabel'
     ParentColor = False
@@ -181,9 +167,9 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Control = FPCSourceDirComboBox
     AnchorSideTop.Side = asrBottom
     Left = 2
-    Height = 15
-    Top = 233
-    Width = 81
+    Height = 13
+    Top = 168
+    Width = 72
     BorderSpacing.Top = 6
     Caption = 'MakePathLabel'
     ParentColor = False
@@ -193,9 +179,9 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Control = MakePathComboBox
     AnchorSideTop.Side = asrBottom
     Left = 2
-    Height = 15
-    Top = 277
-    Width = 91
+    Height = 13
+    Top = 208
+    Width = 81
     BorderSpacing.Top = 6
     Caption = 'TestBuildDirLabel'
     ParentColor = False
@@ -206,12 +192,12 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = MakePathButton
     Left = 2
-    Height = 23
-    Top = 248
+    Height = 21
+    Top = 181
     Width = 595
     Anchors = [akTop, akLeft, akRight]
-    ItemHeight = 15
-    TabOrder = 10
+    ItemHeight = 13
+    TabOrder = 8
     Text = 'MakePathComboBox'
   end
   object MakePathButton: TButton
@@ -221,12 +207,12 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideBottom.Control = MakePathComboBox
     AnchorSideBottom.Side = asrBottom
     Left = 597
-    Height = 23
-    Top = 248
+    Height = 21
+    Top = 181
     Width = 23
     Anchors = [akTop, akRight, akBottom]
     Caption = '...'
-    TabOrder = 11
+    TabOrder = 9
     OnClick = FilesButtonClick
   end
   object TestBuildDirComboBox: TComboBox
@@ -235,12 +221,12 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = TestBuildDirButton
     Left = 2
-    Height = 23
-    Top = 292
+    Height = 21
+    Top = 221
     Width = 595
     Anchors = [akTop, akLeft, akRight]
-    ItemHeight = 15
-    TabOrder = 12
+    ItemHeight = 13
+    TabOrder = 10
     Text = 'TestBuildDirComboBox'
   end
   object TestBuildDirButton: TButton
@@ -250,35 +236,22 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideBottom.Control = TestBuildDirComboBox
     AnchorSideBottom.Side = asrBottom
     Left = 597
-    Height = 23
-    Top = 292
+    Height = 21
+    Top = 221
     Width = 23
     Anchors = [akTop, akRight, akBottom]
     Caption = '...'
-    TabOrder = 13
+    TabOrder = 11
     OnClick = DirectoriesButtonClick
-  end
-  object AutoCloseCompileDialogCheckBox: TCheckBox
-    AnchorSideLeft.Control = ShowCompileDialogCheckBox
-    AnchorSideTop.Control = ShowCompileDialogCheckBox
-    AnchorSideTop.Side = asrBottom
-    AnchorSideRight.Side = asrBottom
-    Left = 32
-    Height = 19
-    Top = 72
-    Width = 204
-    BorderSpacing.Left = 30
-    Caption = 'AutoCloseCompileDialogCheckBox'
-    TabOrder = 3
   end
   object CompilerTranslationFileLabel: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = TestBuildDirComboBox
     AnchorSideTop.Side = asrBottom
     Left = 2
-    Height = 15
-    Top = 321
-    Width = 153
+    Height = 13
+    Top = 248
+    Width = 135
     Alignment = taRightJustify
     BorderSpacing.Top = 6
     Caption = 'CompilerTranslationFileLabel'
@@ -293,14 +266,14 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideBottom.Control = CompilerTranslationFileComboBox
     AnchorSideBottom.Side = asrBottom
     Left = 597
-    Height = 23
-    Top = 336
+    Height = 21
+    Top = 261
     Width = 23
     Anchors = [akTop, akRight, akBottom]
     Caption = '...'
     ParentShowHint = False
     ShowHint = True
-    TabOrder = 15
+    TabOrder = 13
     OnClick = CompilerTranslationFileButtonClick
   end
   object CompilerTranslationFileComboBox: TComboBox
@@ -309,14 +282,14 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = CompilerTranslationFileButton
     Left = 2
-    Height = 23
-    Top = 336
+    Height = 21
+    Top = 261
     Width = 595
     Anchors = [akTop, akLeft, akRight]
-    ItemHeight = 15
+    ItemHeight = 13
     ParentShowHint = False
     ShowHint = True
-    TabOrder = 14
+    TabOrder = 12
     Text = 'CompilerTranslationFileComboBox'
   end
   object lblCenter: TLabel
@@ -329,34 +302,16 @@ object FilesOptionsFrame: TFilesOptionsFrame
     ParentColor = False
   end
   object MaxRecentOpenFilesSpin: TSpinEdit
-    AnchorSideLeft.Control = lblCenter
-    AnchorSideLeft.Side = asrBottom
+    AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = MaxRecentOpenFilesLabel
     AnchorSideTop.Side = asrBottom
-    AnchorSideRight.Control = Owner
-    AnchorSideRight.Side = asrBottom
-    Left = 317
-    Height = 23
-    Hint = 'Value 0 means unlimited.'
-    Top = 19
-    Width = 303
-    Anchors = [akTop, akLeft, akRight]
-    BorderSpacing.Left = 3
-    BorderSpacing.Around = 2
-    ParentShowHint = False
-    ShowHint = True
-    TabOrder = 1
-  end
-  object MaxRecentProjectFilesSpin: TSpinEdit
-    AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = MaxRecentProjectFilesLabel
-    AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = lblCenter
+    AnchorSideRight.Side = asrBottom
     Left = 2
-    Height = 23
+    Height = 21
     Hint = 'Value 0 means unlimited.'
-    Top = 19
-    Width = 304
+    Top = 17
+    Width = 305
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Right = 3
     BorderSpacing.Around = 2
@@ -364,14 +319,32 @@ object FilesOptionsFrame: TFilesOptionsFrame
     ShowHint = True
     TabOrder = 0
   end
+  object MaxRecentProjectFilesSpin: TSpinEdit
+    AnchorSideLeft.Control = lblCenter
+    AnchorSideTop.Control = MaxRecentProjectFilesLabel
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    Left = 316
+    Height = 21
+    Hint = 'Value 0 means unlimited.'
+    Top = 17
+    Width = 304
+    Anchors = [akTop, akLeft, akRight]
+    BorderSpacing.Left = 3
+    BorderSpacing.Around = 2
+    ParentShowHint = False
+    ShowHint = True
+    TabOrder = 1
+  end
   object FppkgConfigurationFileLabel: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = CompilerTranslationFileComboBox
     AnchorSideTop.Side = asrBottom
     Left = 2
-    Height = 15
-    Top = 365
-    Width = 153
+    Height = 13
+    Top = 288
+    Width = 135
     Alignment = taRightJustify
     BorderSpacing.Top = 6
     Caption = 'FppkgConfigurationFileLabel'
@@ -385,14 +358,14 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = FppkgConfigurationFileButton
     Left = 2
-    Height = 23
-    Top = 380
+    Height = 21
+    Top = 301
     Width = 595
     Anchors = [akTop, akLeft, akRight]
-    ItemHeight = 15
+    ItemHeight = 13
     ParentShowHint = False
     ShowHint = True
-    TabOrder = 16
+    TabOrder = 14
     Text = 'FppkgConfigurationFileComboBox'
   end
   object FppkgConfigurationFileButton: TButton
@@ -402,14 +375,14 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideBottom.Control = FppkgConfigurationFileComboBox
     AnchorSideBottom.Side = asrBottom
     Left = 597
-    Height = 23
-    Top = 380
+    Height = 21
+    Top = 301
     Width = 23
     Anchors = [akTop, akRight, akBottom]
     Caption = '...'
     ParentShowHint = False
     ShowHint = True
-    TabOrder = 17
+    TabOrder = 15
     OnClick = FppkgConfigurationFileButtonClick
   end
 end
